// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process table should exclude variable columns using the variable prefix 1`] = `
Object {
  "body": Array [
    Array [
      "bar",
      "foo",
      "12",
    ],
    Array [
      "abc",
      "xyz",
      "",
    ],
  ],
  "head": Array [
    Object {
      "id": "processDefinitionId",
      "label": "Process definition Id",
      "title": "Process definition Id",
    },
    Object {
      "id": "processInstanceId",
      "label": "Process instance Id",
      "title": "Process instance Id",
    },
    Object {
      "id": "variable:var1",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          Var
          : 
        </span>
        var1
      </React.Fragment>,
      "title": "var1",
      "type": "variables",
    },
  ],
}
`;

exports[`Process table should transform data to table compatible format 1`] = `
Object {
  "body": Array [
    Array [
      "bar",
      "foo",
      "12",
      "",
      <Button
        className="ObjectViewBtn"
        kind="ghost"
        onClick={[Function]}
      >
        View
      </Button>,
      "--",
      "2s",
    ],
    Array [
      "abc",
      "xyz",
      "",
      "true",
      "",
      "1s",
      "--",
    ],
  ],
  "head": Array [
    Object {
      "id": "processDefinitionId",
      "label": "Process definition Id",
      "title": "Process definition Id",
    },
    Object {
      "id": "processInstanceId",
      "label": "Process instance Id",
      "title": "Process instance Id",
    },
    Object {
      "id": "variable:var1",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          Var
          : 
        </span>
        var1
      </React.Fragment>,
      "title": "var1",
      "type": "variables",
    },
    Object {
      "id": "variable:var2",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          Var
          : 
        </span>
        var2
      </React.Fragment>,
      "title": "var2",
      "type": "variables",
    },
    Object {
      "id": "variable:var3",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          Var
          : 
        </span>
        var3
      </React.Fragment>,
      "title": "var3",
      "type": "variables",
    },
    Object {
      "id": "flowNodeDuration:dur1",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          Dur
          : 
        </span>
        dur1Name
      </React.Fragment>,
      "sortable": false,
      "title": "dur1Name",
      "type": "flowNodeDurations",
    },
    Object {
      "id": "flowNodeDuration:dur2",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          Dur
          : 
        </span>
        dur2
      </React.Fragment>,
      "sortable": false,
      "title": "dur2",
      "type": "flowNodeDurations",
    },
  ],
}
`;
